# LotusDate

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.Jules/: palette.md
.github/workflows/: build-apk.yml  build.-apk.yml  deploy-pages.yml  gen-keystore.yml
src/: App.tsx  lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: App.tsx  battery.rs  chat.rs  lib.rs  main.rs  matching.rs  p2p.rs  profile.rs
src-tauri/src/components/: BatteryIndicator.tsx  ChatWindows.tsx  ProfileCard.tsx
src-tauri/src/styles/: index.css
src/components/: BatteryIndicator.tsx  ChatWindow.tsx  ProfileCard.tsx
src/lib/: bridge.ts
src/styles/: index.css
