[package]
name = "proxidate-live"
version = "0.1.1"
edition = "2021"

[lib]
name = "proxidate_live"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "proxidate-live"
path = "src/main.rs"

[dependencies]
tauri          = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
tokio          = { version = "1.36", features = ["full"] }

# libp2p 0.54 — API stable avec SwarmBuilder fluent
# gossipsub : messagerie pub/sub P2P
# request-response : like bidirectionnel + échange de profil
# identify : annonce de l'adresse aux pairs
libp2p = { version = "0.54", features = [
    "tokio",
    "kad",
    "gossipsub",
    "request-response",
    "identify",
    "noise",
    "yamux",
    "tcp",
    "dns",
    "macros",
    "autonat",
    "relay",
    "dcutr",
] }

# Chiffrement E2EE — nonce aléatoire
sodiumoxide = "0.2.7"
zeroize     = { version = "1.7", features = ["derive"] }
rand        = "0.8"
uuid        = { version = "1.6", features = ["v4"] }
thiserror   = "1.0"

# Sérialisation des messages réseau
bincode = "1.3"
dirs-next = "2.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
battery = "0.7"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }