[package]
name = "proxidate-live"
version = "0.1.1"
edition = "2021"

[lib]
name = "proxidate_live"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "proxidate-live"
path = "src/main.rs"

[dependencies]
tauri          = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
tokio          = { version = "1.36", features = ["full"] }

# ── Logging / tracing ─────────────────────────────────────────────────────────
# CORRECTIF 1 : tracing doit être déclaré explicitement même si libp2p le tire
# transitivement. Sans cette ligne, tracing:: n'est pas dans le scope du crate root.
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Réseau P2P ────────────────────────────────────────────────────────────────
# libp2p 0.54 — API stable avec SwarmBuilder fluent
# gossipsub : messagerie pub/sub P2P
# request-response : échange bidirectionnel
# identify : annonce de l'adresse aux pairs
libp2p = { version = "0.54", features = [
    "tokio",
    "kad",
    "gossipsub",
    "request-response",
    "identify",
    "noise",
    "yamux",
    "tcp",
    "dns",
    "macros",
    "autonat",
    "relay",
    "dcutr",
] }

# ── Chiffrement E2EE — CORRECTIF 2 ───────────────────────────────────────────
# sodiumoxide 0.2.7 dépend de libsodium-sys (bibliothèque C) qui nécessite
# pkg-config + libsodium installée sur le système. Sur le NDK Android (aarch64),
# cette bibliothèque C n'est pas disponible → erreur de compilation.
#
# Remplacement : chacha20poly1305 (crate RustCrypto, 100% pure Rust)
# XChaCha20-Poly1305 — même algorithme, même sécurité, zéro dépendance C.
chacha20poly1305 = { version = "0.10", features = ["std"] }

# ── Utilitaires ───────────────────────────────────────────────────────────────
zeroize   = { version = "1.7", features = ["derive"] }
rand      = "0.8"
uuid      = { version = "1.6", features = ["v4"] }
thiserror = "1.0"

# Sérialisation des messages réseau
bincode  = "1.3"
dirs-next = "2.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
battery = "0.7"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }