[package]
name = "proxidate-live"
version = "0.1.1"
edition = "2021"

[lib]
name = "proxidate_live"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "proxidate-live"
path = "src/main.rs"

[dependencies]
tauri          = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
tokio          = { version = "1.36", features = ["full"] }

# ── Logging / tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Réseau P2P ────────────────────────────────────────────────────────────────
# libp2p 0.56 — API stable avec SwarmBuilder fluent
# gossipsub : messagerie pub/sub P2P
# request-response : échange bidirectionnel
# identify : annonce de l'adresse aux pairs
libp2p = { version = "0.56", features = [
    "tokio",
    "kad",
    "gossipsub",
    "request-response",
    "identify",
    "noise",
    "yamux",
    "tcp",
    "dns",
    "macros",
    "autonat",
    "relay",
    "dcutr",
] }

# ── Chiffrement E2EE — pure Rust ─────────────────────────────────────────────
# chacha20poly1305 (RustCrypto) remplace sodiumoxide :
# - même algorithme XChaCha20-Poly1305
# - zéro dépendance C → compilation Android sans NDK compliqué
# - maintenance active, audité par la communauté Rust
chacha20poly1305 = { version = "0.10", features = ["std"] }

# ── Utilitaires ───────────────────────────────────────────────────────────────
zeroize   = { version = "1.7", features = ["derive"] }
rand      = "0.8"
uuid      = { version = "1.6", features = ["v4"] }
thiserror = "1.0"

# Sérialisation des messages réseau
bincode  = "1.3"
dirs-next = "2.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
battery = "0.7"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
